syntax = "proto3";

package dataplane;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateSnapshotFromLegacySnapshotRequest {
    string SrcSnapshotId = 1;
    string DstSnapshotId = 2;
    bool UseS3 = 3;
}

message CreateSnapshotFromLegacySnapshotResponse {
    uint64 SnapshotSize = 1;
    uint64 SnapshotStorageSize = 2;
}

message CreateSnapshotFromLegacySnapshotTaskState {
    CreateSnapshotFromLegacySnapshotRequest Request = 1;
    uint32 MilestoneChunkIndex = 2;
    double Progress = 6;
    uint64 SnapshotSize = 3;
    uint64 SnapshotStorageSize = 4;
    uint32 ChunkCount = 5;
}

message CreateSnapshotFromLegacySnapshotMetadata {
    double Progress = 1;
}
