syntax = "proto3";

package images;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/images/protos";

////////////////////////////////////////////////////////////////////////////////

message CreateImageFromImageRequest {
    string SrcImageId = 1;
    string DstImageId = 2;
    string FolderId = 3;
    string OperationCloudId = 4;
    string OperationFolderId = 5;
    repeated types.DiskPool DiskPools = 6;
    bool UseDataplaneTasksForLegacySnapshots = 7;
    bool UseS3 = 8;
}

message CreateImageFromImageTaskState {
    CreateImageFromImageRequest Request = 1;
    int64 Offset = 2;
    double Progress = 3;
    int64 ImageSize = 4;
    int64 ImageStorageSize = 5;
    string DataplaneTaskID = 6;
}
